--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "tslib": "^2.6.2",
     "typescript": "^5.2.2",
     "viem": "^2.13.8",
-    "vite": "^5.2.0"
+    "vite": "^5.2.0",
+    "vite-plugin-node-polyfills": "^0.22.0"
   }
 }
